objects/ASI_MFM_Fix_Approval_Route__c.object
<CustomObject>
    <description>MFM CN Use Only
2nd Table for the fixed approval route of CN MFM approval
Finance, BA, Corporate Approver 1, 2</description>
    <fields>
        <fullName>ASI_MFM_Approval_Limit_BA__c</fullName>
        <label>Approval Limit (BA)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Approval_Limit_BD__c</fullName>
        <label>Approval Limit (BD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Approval_Limit_CA10__c</fullName>
        <label>Approval Limit (CA10)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Approval_Limit_CA11__c</fullName>
        <label>Approval Limit (CA11)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Approval_Limit_CA12__c</fullName>
        <label>Approval Limit (CA12)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Approval_Limit_Finance__c</fullName>
        <label>Approval Limit (Finance)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_BA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_MFM_Fix_Approval_Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_PO_Type__c</fullName>
        <label>PO Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Image Outlet</fullName>
                </value>
                <value>
                    <fullName>In Channel Event</fullName>
                </value>
                <value>
                    <fullName>Out Channel Event</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Event Memo</fullName>
                </value>
                <value>
                    <fullName>Other Memo</fullName>
                </value>
                <value>
                    <fullName>RTMK POSM</fullName>
                </value>
                <value>
                    <fullName>IT Capex</fullName>
                </value>
                <value>
                    <fullName>IT Opex</fullName>
                </value>
                <value>
                    <fullName>RTMK Event</fullName>
                </value>
                <value>
                    <fullName>RTMK Image Outlet</fullName>
                </value>
                <value>
                    <fullName>IT Capex Hardware Region</fullName>
                </value>
                <value>
                    <fullName>IT Capex Hardware HQ</fullName>
                </value>
                <value>
                    <fullName>IT Capex Software</fullName>
                </value>
                <value>
                    <fullName>IT Capex Renovation</fullName>
                </value>
                <value>
                    <fullName>eMarket</fullName>
                    <isActive>false</isActive>
                    <label>eMarket</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Corporate_Approver_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Approver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_MFM_Fix_Approval_Routes10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Corporate_Approver_11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Approver 11</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_MFM_Fix_Approval_Routes11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Corporate_Approver_12__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Approver 12</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_MFM_Fix_Approval_Routes12</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Finance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_MFM_CN_Fix_Approval_Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_KR_Grand_Category__c</fullName>
        <label>Grand Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Direct Payment</fullName>
                </value>
                <value>
                    <fullName>Normal Payment-Non Service</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Non Service</fullName>
                </value>
                <value>
                    <fullName>Pre-payment Service</fullName>
                </value>
                <value>
                    <fullName>Pre-payment Non Service</fullName>
                </value>
                <value>
                    <fullName>Pre-payment</fullName>
                </value>
                <value>
                    <fullName>Offset Payment</fullName>
                </value>
                <value>
                    <fullName>Corporate Card - New</fullName>
                </value>
                <value>
                    <fullName>Donation</fullName>
                </value>
                <value>
                    <fullName>Return Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_KR_Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brand Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Trade Marketing</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Spirits</fullName>
                </value>
                <value>
                    <fullName>Imperial</fullName>
                </value>
                <value>
                    <fullName>Ballantine&apos;s</fullName>
                </value>
                <value>
                    <fullName>Chivas</fullName>
                </value>
                <value>
                    <fullName>Royal Salute</fullName>
                </value>
                <value>
                    <fullName>The Glenlivet</fullName>
                </value>
                <value>
                    <fullName>Absolut</fullName>
                </value>
                <value>
                    <fullName>Jameson</fullName>
                </value>
                <value>
                    <fullName>Olmeca</fullName>
                </value>
                <value>
                    <fullName>Kahlua</fullName>
                </value>
                <value>
                    <fullName>Malibu</fullName>
                </value>
                <value>
                    <fullName>Beefeater</fullName>
                </value>
                <value>
                    <fullName>Havana Club</fullName>
                </value>
                <value>
                    <fullName>Wine &amp; Champagne</fullName>
                </value>
                <value>
                    <fullName>Sales Rep - OFF</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Brand Marketing - Non Service</fullName>
                </value>
                <value>
                    <fullName>Brand BA Team</fullName>
                </value>
                <value>
                    <fullName>BA Team</fullName>
                </value>
                <value>
                    <fullName>Trade Marketing Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Module__c</fullName>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>Plan</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Prepayment Proposal Change Log</fullName>
                </value>
                <value>
                    <fullName>eForm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Need_Brand_Marketing__c</fullName>
        <label>Need Brand Marketing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NTMK</fullName>
                </value>
                <value>
                    <fullName>MMPJ</fullName>
                </value>
                <value>
                    <fullName>Whiskies</fullName>
                </value>
                <value>
                    <fullName>Wine</fullName>
                </value>
                <value>
                    <fullName>Innovation and White Spirits</fullName>
                </value>
                <value>
                    <fullName>Luxe</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>OFF</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Cognac and White spirits</fullName>
                </value>
                <value>
                    <fullName>Merchandising</fullName>
                </value>
                <value>
                    <fullName>Bar&amp;Restaurant</fullName>
                </value>
                <value>
                    <fullName>KTV</fullName>
                </value>
                <value>
                    <fullName>IHBR</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>North West</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>South West</fullName>
                </value>
                <value>
                    <fullName>Brand Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Trade Marketing</fullName>
                </value>
                <value>
                    <fullName>North Premium</fullName>
                </value>
                <value>
                    <fullName>Central Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ASI MFM Fix Approval Route</label>
    <listViews>
        <fullName>All_CN</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Team__c</columns>
        <columns>ASI_MFM_Finance__c</columns>
        <columns>ASI_MFM_Approval_Limit_Finance__c</columns>
        <columns>ASI_MFM_BA__c</columns>
        <columns>ASI_MFM_Approval_Limit_BA__c</columns>
        <columns>ASI_MFM_Corporate_Approver_1__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA1__c</columns>
        <columns>ASI_MFM_Corporate_Approver_2__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA2__c</columns>
        <columns>ASI_MFM_Corporate_Approver_3__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA3__c</columns>
        <columns>ASI_MFM_Corporate_Approver_4__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Fix_Approval_Route__c.ASI_MFM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_MFM_Module__c</field>
            <operation>equals</operation>
            <value>PO</value>
        </filters>
        <label>All CN by type</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CN1</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_CN_PO_Type__c</columns>
        <columns>ASI_MFM_Team__c</columns>
        <columns>ASI_MFM_Finance__c</columns>
        <columns>ASI_MFM_Approval_Limit_Finance__c</columns>
        <columns>ASI_MFM_BA__c</columns>
        <columns>ASI_MFM_Approval_Limit_BA__c</columns>
        <columns>ASI_MFM_Corporate_Approver_1__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA1__c</columns>
        <columns>ASI_MFM_Corporate_Approver_2__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA2__c</columns>
        <columns>ASI_MFM_Corporate_Approver_3__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Fix_Approval_Route__c.ASI_MFM_CN_Fix_Approval_Route</value>
        </filters>
        <label>All CN</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CNDEBUG</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Team__c</columns>
        <columns>ASI_MFM_Finance__c</columns>
        <columns>ASI_MFM_Approval_Limit_Finance__c</columns>
        <columns>ASI_MFM_BA__c</columns>
        <columns>ASI_MFM_Approval_Limit_BA__c</columns>
        <columns>ASI_MFM_Corporate_Approver_1__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA1__c</columns>
        <columns>ASI_MFM_Corporate_Approver_2__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA2__c</columns>
        <columns>ASI_MFM_Corporate_Approver_3__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA3__c</columns>
        <columns>ASI_MFM_Corporate_Approver_4__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Fix_Approval_Route__c.ASI_MFM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_MFM_Team__c</field>
            <operation>equals</operation>
            <value>MMPJ</value>
        </filters>
        <label>All CN DEBUG</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CN_PO_Module</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_CN_PO_Type__c</columns>
        <columns>ASI_MFM_Team__c</columns>
        <columns>ASI_MFM_Finance__c</columns>
        <columns>ASI_MFM_Approval_Limit_Finance__c</columns>
        <columns>ASI_MFM_BA__c</columns>
        <columns>ASI_MFM_Approval_Limit_BD__c</columns>
        <columns>ASI_MFM_Corporate_Approver_1__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA1__c</columns>
        <columns>ASI_MFM_Corporate_Approver_2__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA2__c</columns>
        <columns>ASI_MFM_Corporate_Approver_3__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA3__c</columns>
        <columns>ASI_MFM_Corporate_Approver_4__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Fix_Approval_Route__c.ASI_MFM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_MFM_Module__c</field>
            <operation>equals</operation>
            <value>PO</value>
        </filters>
        <label>All CN PO Module</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CN_PO_Module_BD</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_CN_PO_Type__c</columns>
        <columns>ASI_MFM_Team__c</columns>
        <columns>ASI_MFM_Approval_Limit_BD__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Fix_Approval_Route__c.ASI_MFM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_MFM_Module__c</field>
            <operation>equals</operation>
            <value>PO</value>
        </filters>
        <filters>
            <field>ASI_MFM_Approval_Limit_BD__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All CN PO Module BD</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CN_PO_Module_Memo</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_CN_PO_Type__c</columns>
        <columns>ASI_MFM_Team__c</columns>
        <columns>ASI_MFM_Finance__c</columns>
        <columns>ASI_MFM_Approval_Limit_Finance__c</columns>
        <columns>ASI_MFM_BA__c</columns>
        <columns>ASI_MFM_Approval_Limit_BA__c</columns>
        <columns>ASI_MFM_Corporate_Approver_1__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA1__c</columns>
        <columns>ASI_MFM_Corporate_Approver_2__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA2__c</columns>
        <columns>ASI_MFM_Corporate_Approver_3__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA3__c</columns>
        <columns>ASI_MFM_Corporate_Approver_4__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Fix_Approval_Route__c.ASI_MFM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_MFM_Module__c</field>
            <operation>equals</operation>
            <value>PO</value>
        </filters>
        <filters>
            <field>ASI_MFM_CN_PO_Type__c</field>
            <operation>contains</operation>
            <value>Event Memo,Other Memo</value>
        </filters>
        <label>All CN PO Module - Memo</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CN_Payment_Module</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Team__c</columns>
        <columns>ASI_MFM_Finance__c</columns>
        <columns>ASI_MFM_Approval_Limit_Finance__c</columns>
        <columns>ASI_MFM_BA__c</columns>
        <columns>ASI_MFM_Approval_Limit_BA__c</columns>
        <columns>ASI_MFM_Corporate_Approver_1__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA1__c</columns>
        <columns>ASI_MFM_Corporate_Approver_2__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA2__c</columns>
        <columns>ASI_MFM_Corporate_Approver_3__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA3__c</columns>
        <columns>ASI_MFM_Corporate_Approver_4__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Fix_Approval_Route__c.ASI_MFM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_MFM_Module__c</field>
            <operation>equals</operation>
            <value>Payment</value>
        </filters>
        <label>All CN Payment Module</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CN_Team_View_Bar_Restaurant</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Team__c</columns>
        <columns>ASI_MFM_Finance__c</columns>
        <columns>ASI_MFM_Approval_Limit_Finance__c</columns>
        <columns>ASI_MFM_BA__c</columns>
        <columns>ASI_MFM_Approval_Limit_BA__c</columns>
        <columns>ASI_MFM_Corporate_Approver_1__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA1__c</columns>
        <columns>ASI_MFM_Corporate_Approver_2__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA2__c</columns>
        <columns>ASI_MFM_Corporate_Approver_3__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA3__c</columns>
        <columns>ASI_MFM_Corporate_Approver_4__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Fix_Approval_Route__c.ASI_MFM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_MFM_Team__c</field>
            <operation>equals</operation>
            <value>Bar&amp;Restaurant</value>
        </filters>
        <label>CN Team View - Bar&amp;Restaurant</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CN_Team_View_Central</fullName>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Team__c</columns>
        <columns>ASI_MFM_Finance__c</columns>
        <columns>ASI_MFM_Approval_Limit_Finance__c</columns>
        <columns>ASI_MFM_BA__c</columns>
        <columns>ASI_MFM_Approval_Limit_BA__c</columns>
        <columns>ASI_MFM_Approval_Limit_BD__c</columns>
        <columns>ASI_MFM_Corporate_Approver_1__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA1__c</columns>
        <columns>ASI_MFM_Corporate_Approver_2__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA2__c</columns>
        <columns>ASI_MFM_Corporate_Approver_3__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA3__c</columns>
        <columns>ASI_MFM_Corporate_Approver_4__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Fix_Approval_Route__c.ASI_MFM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_MFM_Team__c</field>
            <operation>equals</operation>
            <value>Central</value>
        </filters>
        <label>CN Team View - Central</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CN_Team_View_East</fullName>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Team__c</columns>
        <columns>ASI_MFM_Finance__c</columns>
        <columns>ASI_MFM_Approval_Limit_Finance__c</columns>
        <columns>ASI_MFM_BA__c</columns>
        <columns>ASI_MFM_Approval_Limit_BA__c</columns>
        <columns>ASI_MFM_Approval_Limit_BD__c</columns>
        <columns>ASI_MFM_Corporate_Approver_1__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA1__c</columns>
        <columns>ASI_MFM_Corporate_Approver_2__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA2__c</columns>
        <columns>ASI_MFM_Corporate_Approver_3__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA3__c</columns>
        <columns>ASI_MFM_Corporate_Approver_4__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Fix_Approval_Route__c.ASI_MFM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_MFM_Team__c</field>
            <operation>equals</operation>
            <value>East</value>
        </filters>
        <label>CN Team View - East</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CN_Team_View_Finance</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Team__c</columns>
        <columns>ASI_MFM_Finance__c</columns>
        <columns>ASI_MFM_Approval_Limit_Finance__c</columns>
        <columns>ASI_MFM_BA__c</columns>
        <columns>ASI_MFM_Approval_Limit_BA__c</columns>
        <columns>ASI_MFM_Corporate_Approver_1__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA1__c</columns>
        <columns>ASI_MFM_Corporate_Approver_2__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA2__c</columns>
        <columns>ASI_MFM_Corporate_Approver_3__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA3__c</columns>
        <columns>ASI_MFM_Corporate_Approver_4__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Fix_Approval_Route__c.ASI_MFM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_MFM_Team__c</field>
            <operation>equals</operation>
            <value>Finance</value>
        </filters>
        <label>CN Team View - Finance</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CN_Team_View_IH</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Team__c</columns>
        <columns>ASI_MFM_Finance__c</columns>
        <columns>ASI_MFM_Approval_Limit_Finance__c</columns>
        <columns>ASI_MFM_BA__c</columns>
        <columns>ASI_MFM_Approval_Limit_BA__c</columns>
        <columns>ASI_MFM_Corporate_Approver_1__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA1__c</columns>
        <columns>ASI_MFM_Corporate_Approver_2__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA2__c</columns>
        <columns>ASI_MFM_Corporate_Approver_3__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA3__c</columns>
        <columns>ASI_MFM_Corporate_Approver_4__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Fix_Approval_Route__c.ASI_MFM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_MFM_Team__c</field>
            <operation>equals</operation>
            <value>IH</value>
        </filters>
        <label>CN Team View - IH</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CN_Team_View_IHBR</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Team__c</columns>
        <columns>ASI_MFM_Finance__c</columns>
        <columns>ASI_MFM_Approval_Limit_Finance__c</columns>
        <columns>ASI_MFM_BA__c</columns>
        <columns>ASI_MFM_Approval_Limit_BA__c</columns>
        <columns>ASI_MFM_Corporate_Approver_1__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA1__c</columns>
        <columns>ASI_MFM_Corporate_Approver_2__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA2__c</columns>
        <columns>ASI_MFM_Corporate_Approver_3__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA3__c</columns>
        <columns>ASI_MFM_Corporate_Approver_4__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Fix_Approval_Route__c.ASI_MFM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_MFM_Team__c</field>
            <operation>equals</operation>
            <value>IHBR</value>
        </filters>
        <label>CN Team View - IHBR</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CN_Team_View_IT_HQ</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Team__c</columns>
        <columns>ASI_MFM_Finance__c</columns>
        <columns>ASI_MFM_Approval_Limit_Finance__c</columns>
        <columns>ASI_MFM_BA__c</columns>
        <columns>ASI_MFM_Approval_Limit_BA__c</columns>
        <columns>ASI_MFM_Corporate_Approver_1__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA1__c</columns>
        <columns>ASI_MFM_Corporate_Approver_2__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA2__c</columns>
        <columns>ASI_MFM_Corporate_Approver_3__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA3__c</columns>
        <columns>ASI_MFM_Corporate_Approver_4__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Fix_Approval_Route__c.ASI_MFM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_MFM_Team__c</field>
            <operation>equals</operation>
            <value>IT-HQ</value>
        </filters>
        <label>CN Team View - IT-HQ</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CN_Team_View_IT_PC</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Module__c</columns>
        <columns>ASI_MFM_Team__c</columns>
        <columns>ASI_MFM_Finance__c</columns>
        <columns>ASI_MFM_Approval_Limit_Finance__c</columns>
        <columns>ASI_MFM_BA__c</columns>
        <columns>ASI_MFM_Approval_Limit_BA__c</columns>
        <columns>ASI_MFM_Corporate_Approver_1__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA1__c</columns>
        <columns>ASI_MFM_Corporate_Approver_2__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA2__c</columns>
        <columns>ASI_MFM_Corporate_Approver_3__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA3__c</columns>
        <columns>ASI_MFM_Corporate_Approver_4__c</columns>
        <columns>ASI_MFM_Approval_Limit_CA4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Fix_Approval_Route__c.ASI_MFM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_MFM_Team__c</field>
            <operation>equals</operation>
            <value>IT-PC</value>
        </filters>
        <label>CN Team View - IT-PC</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FAR{000000}</displayFormat>
        <label>ASI_MFM_Fix_Approval_Route Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI MFM Fix Approval Routes</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CN_Fix_Approval_Route</fullName>
        <active>true</active>
        <label>CN Fix Approval Route</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_KR_Fix_Approval_Route</fullName>
        <active>true</active>
        <label>KR Fix Approval Route</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>